// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentTestView renders with a GettingStartedView when a Getting started item is selected 1`] = `
<React.Fragment>
  <ScanIncompleteWarning
    deps={
      {
        "assessmentActionMessageCreator": {},
        "getProvider": [Function],
      }
    }
    test={-1}
    warningConfiguration={{}}
  />
  <TargetChangeDialog
    deps={
      {
        "assessmentActionMessageCreator": {},
        "getProvider": [Function],
      }
    }
    newTab={
      {
        "id": -2,
        "title": "test title",
        "url": "test url",
      }
    }
  />
  <GettingStartedView
    assessment={{}}
    deps={
      {
        "assessmentActionMessageCreator": {},
        "getProvider": [Function],
      }
    }
  />
</React.Fragment>
`;

exports[`AssessmentTestView renders with a RequirementView when a requirement is selected 1`] = `
<React.Fragment>
  <ScanIncompleteWarning
    deps={
      {
        "assessmentActionMessageCreator": {},
        "getProvider": [Function],
      }
    }
    test={-1}
    warningConfiguration={{}}
  />
  <TargetChangeDialog
    deps={
      {
        "assessmentActionMessageCreator": {},
        "getProvider": [Function],
      }
    }
    newTab={
      {
        "id": -2,
        "title": "test title",
        "url": "test url",
      }
    }
  />
  <RequirementView
    assessmentData={{}}
    assessmentInstanceTableHandler={{}}
    assessmentNavState={
      {
        "selectedTestSubview": "step",
        "selectedTestType": -1,
      }
    }
    currentTarget={
      {
        "id": -2,
        "title": "test title",
        "url": "test url",
      }
    }
    deps={
      {
        "assessmentActionMessageCreator": {},
        "getProvider": [Function],
      }
    }
    featureFlagStoreData={{}}
    isRequirementEnabled={false}
    pathSnippetStoreData={{}}
    scanningInProgress={true}
  />
</React.Fragment>
`;
